--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1418,6 +1418,33 @@ node_types:
             marathon_password: { get_property: [ SELF, marathon_password ] }
             server_image: { get_property: [ SELF, server_image ] }
 
+  tosca.nodes.indigo.HelmInstall:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      name:
+        type: string
+        description: name of the helm deployment
+        required: yes
+      chart:
+        type: string
+        description: chart name
+        required: yes
+      values:
+        description: URL to values.yaml file
+        required: yes
+    artifacts:
+      cms_config_role:
+        file: cloud-pg.ansible_role_helm
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        start:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/k8s/artifacts/helm/helm.yml
+          inputs:
+            name: { get_property: [ SELF, name ] }
+            chart: { get_property: [ SELF, chart ] }
+            values: { get_property: [ SELF, values ] }
+
   tosca.nodes.indigo.CmsServices:
     derived_from: tosca.nodes.SoftwareComponent
     properties:
