--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1430,6 +1430,7 @@ node_types:
         description: chart name
         required: yes
       values:
+        type: string
         description: URL to values.yaml file
         required: yes
     artifacts:
