--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1608,7 +1608,7 @@ node_types:
             low_port:  { get_property: [ SELF, htcondor_config_low_port ] }
             config_mode: { get_property: [ SELF, config_mode ] }
             htcondor_config_condor_image: { get_property: [ SELF, htcondor_config_condor_image ] }
-            htcondor_config_ccb_ip: { get_property: [ SELF, htcondor_config_ccb_ip_pub ] }
+            htcondor_config_ccb_ip_pub: { get_property: [ SELF, htcondor_config_ccb_ip_pub ] }
             htcondor_config_ccb_ip: { get_property: [ SELF, htcondor_config_ccb_ip ] }
             proxycache_host: { get_property: [ SELF, proxycache_host ] }
             proxy_cache_manager: { get_property: [ SELF, proxycache_token_manager ] }
