Set devel branch

--- a/examples/mesos_elastic_cluster.yaml
+++ b/examples/mesos_elastic_cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/custom_types.yaml
 
 description: TOSCA example for specifying a Mesos Cluster
 
@@ -142,10 +142,9 @@ topology_template:
             mem_size: 1 GB
         os:
           properties:
-#            type: linux
-#            distribution: ubuntu
-#            version: 14.04
-            image: linux-ubuntu-14.04-vmi
+            type: linux
+            distribution: ubuntu
+            version: 16.04
 
   outputs:
     mesos_lb_ips:
